# DataFilter

./: CMakeLists.txt  README.md  conanfile.txt  datafilter.pc.in
.github/workflows/: cmake-multi-platform.yml
header/: config.h  process_data.h
include/datafilter/: config.h  datafilter.h  output_data.h  probabilities.h  process_data.h  read_counts_file.h  thread_pool.h
source/: config.cpp  main.cpp  output_data.cpp  probabilities.cpp  process_data.cpp  read_counts_file.cpp
src/: config.cpp  main.cpp  output_data.cpp  probabilities.cpp  process_data.cpp  read_counts_file.cpp
